--- a/json_csv_convert/json_csv_convert/json_csv_convert.csproj
+++ b/json_csv_convert/json_csv_convert/json_csv_convert.csproj
@@ -57,6 +57,7 @@
     <Compile Include="About.Designer.cs">
       <DependentUpon>About.cs</DependentUpon>
     </Compile>
+    <Compile Include="kazuko\PSAPParser.cs" />
     <Compile Include="MainWindow.cs">
       <SubType>Form</SubType>
     </Compile>
